--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!doctype html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://ntthnue.edu.vn/uploads/Images/2023/V3/Logo_Web_Bo%20tr%E1%BA%AFng.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bình chọn thí sinh thanh lịch</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Bình chọn thí sinh thanh lịch 2025 | NTTHNUE</title>
+    <meta name="title" content="Bình chọn thí sinh thanh lịch 2025 | NTTHNUE">
+    <meta name="description" content="Tham gia bình chọn cho thí sinh yêu thích của bạn trong cuộc thi sinh viên thanh lịch NTTHNUE 2025. Mỗi lượt bình chọn đều có giá trị!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://facebook-vote-five.vercel.app/">
+    <meta property="og:title" content="Bình chọn thí sinh thanh lịch 2025 | NTTHNUE">
+    <meta property="og:description" content="Tham gia bình chọn cho thí sinh yêu thích của bạn trong cuộc thi sinh viên thanh lịch NTTHNUE 2025. Hãy ủng hộ ngay!">
+    <meta property="og:image" content="https://thisinhthanhlich.com.vn/giaodiensc0m/hsthanhlich/images/11.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://facebook-vote-five.vercel.app/">
+    <meta property="twitter:title" content="Bình chọn thí sinh thanh lịch 2025 | NTTHNUE">
+    <meta property="twitter:description" content="Tham gia bình chọn cho thí sinh yêu thích của bạn trong cuộc thi sinh viên thanh lịch NTTHNUE 2025. Hãy ủng hộ ngay!">
+    <meta property="twitter:image" content="https://thisinhthanhlich.com.vn/giaodiensc0m/hsthanhlich/images/11.png"> 
+
+    <!-- Canonical link -->
+    <link rel="canonical" href="https://facebook-vote-five.vercel.app/">
+
+    <!-- Structured data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "url": "https://facebook-vote-five.vercel.app/",
+      "name": "Bình chọn thí sinh thanh lịch 2025 | NTTHNUE",
+      "description": "Tham gia bình chọn cho thí sinh yêu thích của bạn trong cuộc thi sinh viên thanh lịch NTTHNUE 2025."
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
